# tez-analiz

./: CLAUDE.md  README.md  iletisim_analiz.py  iletisim_notebook.ipynb  main.py  problem_cozme_analiz.py  problem_cozme_notebook.ipynb  pyproject.toml  tanimlayici_istatistikler.xlsx  test_notebook.ipynb
data/: GENEL TABLO.docx  olcek_yapilari.md
data/Problem_Çözme_Becerileri/: PÇBÖ adlı dosyanın kopyası.docx
data/Problem_Çözme_Becerileri/sontest/: PÇBÖ - Son test - Yanıtlar adlı dosyanın kopyası.xlsx
data/Problem_Çözme_Becerileri/öntest/: PÇBÖ - Ön test - Yanıtlar adlı dosyanın kopyası.xlsx
data/İletişim_Becerileri/: İBDÖ - Fidan Korkut.docx adlı dosyanın kopyası.docx
data/İletişim_Becerileri/sontest/: İBDÖ - Son test - Cevaplar adlı dosyanın kopyası.xlsx
data/İletişim_Becerileri/öntest/: İBDÖ - Ön test - Yanıtlar adlı dosyanın kopyası.xlsx
